--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -24,6 +24,7 @@
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#map">Map search</a></li>
                 <li><a data-toggle="tab" href="#map/newMap">New map</a></li>
+                <li><a data-toggle="tab" href="#map/simulationParameters">Simulation parameters</a></li>
             </ul>
             
             <div class="panel-body">
@@ -102,7 +103,6 @@
                                     <th>Creator</th>
                                     <th>Type</th>
                                     <th>State</th>
-                                    <th>City</th>
                                     <th>Creation date</th>
                                     <th>Actions</th>
                                 </tr>
@@ -113,7 +113,6 @@
                                     <td>user name 1</td>
                                     <td>Private</td>
                                     <td>Draft</td>
-                                    <td>Zaragoza</td>
                                     <td>01/10/2015</td>
                                     <td>    
                                         <ul class="nav nav-tabs">  
@@ -128,7 +127,11 @@
                                                            data-toggle="modal" data-target="#startSimulationModal">Start simulation</a></li>
 
                                                     <li><a href="#map" role="button" 
-                                                           data-toggle="modal" data-target="#configModal">Configurations</a>
+                                                           data-toggle="modal" data-target="#editMap">Edit map</a>
+                                                    </li>
+                                                    
+                                                    <li><a href="#map" role="button" 
+                                                           data-toggle="modal" data-target="#editSceneModal">Edit scene</a>
                                                     </li>
 
                                                     <li><a href="#map" role="button" 
@@ -148,7 +151,6 @@
                                     <td>user name 2</td>
                                     <td>Public</td>
                                     <td>Active</td>
-                                    <td>Madrid</td>
                                     <td>01/05/2014</td>
                                     <td>
                                         <button type="button" class="btn btn-success" 
@@ -161,7 +163,6 @@
                                     <td>user name 3</td>
                                     <td>Public</td>
                                     <td>Draft</td>
-                                    <td>New York</td>
                                     <td>01/04/2014</td>
                                     <td>
                                         <button type="button" class="btn btn-success disabled">Start simulation</button>
@@ -214,8 +215,8 @@
           </div>
         </div>
 
-        <!-- configuration Modal -->
-        <div class="modal fade" role="dialog" id="configModal">
+        <!-- edit map Modal -->
+        <div class="modal fade" role="dialog" id="editMap">
           <div class="modal-dialog">
 
             <!-- Modal content-->
@@ -236,25 +237,22 @@
                               <div class="row">
                                     <div class="col-sm-6">
                                       <label>Name</label>
-                                      <input class="form-control" value="Actur simulation" disabled/>
+                                      <input class="form-control" value="Actur simulation" />
                                     </div>
 
                                     <div class="col-sm-6">
                                       <label>Creator</label>
                                       <input class="form-control" value="user name 1" disabled/>
                                     </div>
+                                      
+                                    <div class="col-sm-6">
+                                        </br>
+                                        <label>Creation date</label>
+                                        <input class="form-control" type="text" value="01/10/2015" disabled/>
+                                    </div>
                                   
                                     <div class="col-sm-6">
-                                      <label>City</label>
-                                      <input class="form-control" value="Zaragoza" disabled/>
-                                    </div>
-
-                                    <div class="col-sm-6">
-                                        <label>Start date</label>
-                                        <input class="form-control" value="01/10/2015" disabled/>
-                                    </div>
-
-                                    <div class="col-sm-6">
+                                        </br>
                                         <label>Type</label>
                                         <select class="form-control">
                                             <option value="all">All</option>
@@ -264,70 +262,46 @@
                                     </div>
 
                                     <div class="col-sm-6">
+                                        </br>
                                         <label>State</label>
                                         <select  class="form-control">
                                             <option value="All">All</option>
                                             <option value="draft">Draft</option>
                                             <option value="active">Active</option>
                                         </select>
-                                    </div>                        
-
-                                    <div class="col-sm-6">
-                                        <label>End date</label>
-                                        <input class="form-control" type="date"/>
                                     </div>
                                 </div> 
                         </div>
                     </div>
-                </div>    
-                  
-                <div class="panel-body">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-search"></i> Dynamic objects</h3>                        
-                        </div>
-
-                        <div class="panel-body">                      
-                              <div class="row">
-                                    <div class="col-xs-12">
-                                        <label>Dynamic objects</label>
-                                        <input type="file" name='imgPerfil'>
-                                        <b><i>* Dynamic map objects will be replaced</i></b>
-                                    </div>
-                                </div> 
-                        </div>
-                    </div>
-                </div>
-
-                  <div class="panel-body">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-search"></i> Simulation parameters</h3>                        
-                        </div>
-
-                        <div class="panel-body">                      
-                            <div class="row">
-                                  <div class="col-xs-6">
-                                      <label>Recommended maximum number of places</label>
-                                      <input class="form-control" type="text">
-                                  </div>
-
-                                  <div class="col-xs-6">
-                                      <label>Maximum number of users supported</label>
-                                      <input class="form-control" type="text">
-                                  </div>
-                                  
-                                  
-
-                            </div> 
-                        </div>
-                    </div>
-                </div>                                  
+                </div>                                   
               </div>
                 
               <div class="modal-footer">  
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>  
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- edit scene Modal -->
+        <div class="modal fade" role="dialog" id="editSceneModal">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Scene management</h4>
+              </div>
+                
+              <div class="modal-body">
+                   Lista de escenas
+              </div>
+                
+              <div class="modal-footer">  
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
             </div>
 
