--- a/public/views/configurations/index.html
+++ b/public/views/configurations/index.html
@@ -15,17 +15,11 @@
                     <ul class="nav navbar-nav side-nav">
                         <li><a href="#/map"><i class="fa fa-plus-circle"></i> Maps</a></li>
                         <li><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
-                        <li class="active"><a href="#/configurations"><i class="fa fa-edit"></i> Configurations</a></li>
+                        <li><a href="#/parameters"><i class="fa fa-globe"></i> Simulation parameters</a></li>
+                        <li class="active"><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                     </ul>
                 </div>		
             </nav>            
-            
-            <div id="page-wrapper">		                
-                <ul class="nav nav-tabs">
-                  <li class="active"><a data-toggle="tab" href="#configurations">Profile</a></li>
-                  <li><a data-toggle="tab" href="#configurations/mapConfigurations">Maps</a></li>
-                  <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
-                </ul>
                 
                 <div class="panel-body">
                     <div class="panel panel-primary">
@@ -109,6 +103,6 @@
                         </div>
                     </div>                             
                 </div>                
-            </div>            
+              
         </div>
     </div>
