--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -15,7 +15,8 @@
                 <ul class="nav navbar-nav side-nav">
                     <li class="active"><a href="#/map"><i class="fa fa-plus-circle"></i> Maps</a></li>
                     <li><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
-                    <li><a href="#/configurations"><i class="fa fa-edit"></i> Configurations</a></li>
+                    <li><a href="#/parameters"><i class="fa fa-globe"></i> Simulation parameters</a></li>
+                    <li><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                 </ul>
             </div>
         </nav>
@@ -24,7 +25,6 @@
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#map">Map search</a></li>
                 <li><a data-toggle="tab" href="#map/newMap">New map</a></li>
-                <li><a data-toggle="tab" href="#map/simulationParameters">Simulation parameters</a></li>
             </ul>
             
             <div class="panel-body">
