--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -15,7 +15,8 @@
                 <ul class="nav navbar-nav side-nav">
                     <li class="active"><a href="#/map"><i class="fa fa-plus-circle"></i> Maps</a></li>
                     <li><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
-                    <li><a href="#/configurations"><i class="fa fa-edit"></i> Configurations</a></li>
+                    <li><a href="#/parameters"><i class="fa fa-globe"></i> Simulation parameters</a></li>
+                    <li><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                 </ul>
             </div>
         </nav>            
@@ -24,7 +25,6 @@
             <ul class="nav nav-tabs">
                 <li><a data-toggle="tab" href="#map">Map search</a></li>
                 <li class="active"><a data-toggle="tab" href="#newMap">New map</a></li>
-                <li><a data-toggle="tab" href="#map/simulationParameters">Simulation parameters</a></li>
             </ul>
 
             <div class="panel-body">  
@@ -88,7 +88,7 @@
                             
                             <div class="col-xs-12">
                                 </br>                              
-                                <label>Static objects</label>    
+                                <label>Static items</label>    
                                 <input type="file" name='imgPerfil'>     
                                 <b>
                                     <i>* File containing these static objects on the map, that is, don't 
@@ -99,7 +99,7 @@
                                       
                             <div class="col-xs-12">           
                                 </br>      
-                                <label>Dynamic objects</label>         
+                                <label>Dynamic items</label>
                                 <input type="file" name='imgPerfil'>      
                                 <b>
                                     <i>* File containing dynamic objects of the map, that is, the changing 
@@ -187,7 +187,7 @@
 
                 <div class="panel panel-primary table-responsive">
                     <div class="panel-heading">
-                        <h3 class="panel-title"><i class="fa fa-list-alt"></i> List of scenes for this city</h3>
+                        <h3 class="panel-title"><i class="fa fa-list-alt"></i> List of scenes for this map</h3>
                     </div>
                     
                         <table class="table table-striped">
