--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -15,7 +15,8 @@
                     <ul class="nav navbar-nav side-nav">
                         <li><a href="#/map"><i class="fa fa-plus-circle"></i> Maps</a></li>
                         <li class="active"><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
-                        <li><a href="#/configurations"><i class="fa fa-edit"></i> Configurations</a></li>
+                        <li><a href="#/parameters"><i class="fa fa-globe"></i> Simulation parameters</a></li>
+                        <li><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                     </ul>
                 </div>		
             </nav>
@@ -77,8 +78,10 @@
                                 </button>
  
                                 <ul class="dropdown-menu">
+                                    <li><a href="#">Start simulation</a></li>
+                                    <li><a href="#">Pause simulation</a></li>
+                                    <li><a href="#">Stop simulation</a></li>
                                     <li><a href="#">Export map</a></li>
-                                    <li><a href="#">Finish simulation</a></li>
                                 </ul>
                             </div>
                         </ul>
