--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -66,13 +66,13 @@
                             
                             <div class="col-sm-4">
                                 </br>
-                                <label>Start date</label>
+                                <label>Creation start date</label>
                                 <input class="form-control" type="date"/>
                             </div>
                             
                             <div class="col-sm-4">
                                 </br>
-                                <label>End date</label>
+                                <label>Creation end date</label>
                                 <input class="form-control" type="date"/>
                             </div>
                 
