--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -70,21 +70,18 @@
                         </script>
                     
                     <div class="col-sm-4">
-                        <ul class="nav nav-tabs">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default dropdown-toggle" 
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Actions <span class="caret"></span>
-                                </button>
- 
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Start simulation</a></li>
-                                    <li><a href="#">Pause simulation</a></li>
-                                    <li><a href="#">Stop simulation</a></li>
-                                    <li><a href="#">Export map</a></li>
-                                </ul>
-                            </div>
-                        </ul>
+                        <button type="button" class="btn btn-default fa fa-play-circle-o">                         
+                        </button>
+                        
+                        <button type="button" class="btn btn-default fa fa-pause">                         
+                        </button>
+                        
+                        <button type="button" class="btn btn-default fa fa-stop">                         
+                        </button>
+                        
+                        <button type="button" class="btn btn-default fa fa-download">                         
+                        </button>
+
                         
                          <!-- <a id="export-png" class="btn" download="map.png"><i class="icon-download"></i> Export PNG</a> 
                         <br/>
