--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -58,7 +58,7 @@
                             
                             <div class="col-xs-12">
                                 </br>
-                                <input type="submit" class="btn btn-primary" value="Create map">
+                                <input type="submit" class="btn btn-primary" value="Save">
                             </div>
                     </div>     
                 </div>   
@@ -179,7 +179,7 @@
             
                             <div class="col-sm-12">
                                 <br/>
-                                <input type="submit" class="btn btn-primary" value="Create scene">
+                                <input type="submit" class="btn btn-primary" value="Save">
                             </div>
                     </div>     
                 </div>                         
